ingress/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blue
  name: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  strategy: {}
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - image: robertsilvatech/flask-color:latest
        imagePullPolicy: Always
        name: flask-color
        resources: {}
        ports:
          - containerPort: 5000
            protocol: TCP
