ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/blue"
        pathType: Prefix
        backend:
          service:
            name: blue
            port:
              number: 5000
      - path: "/red"
        pathType: Prefix
        backend:
          service:
            name: red
            port:
              number: 5000
